[gd_scene load_steps=4 format=3 uid="uid://6c0qmw6qsnb4"]

[ext_resource type="Script" path="res://app/main/create.gd" id="1_844ch"]
[ext_resource type="Texture2D" uid="uid://6ydmk7wde6dr" path="res://icon.png" id="2_s5ld1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwaeq"]

[node name="Control" type="Node"]
script = ExtResource("1_844ch")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(300, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Имя"

[node name="ProjectNameLineEdit" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_bwaeq")
text = "Unnamed"
placeholder_text = "Unnamed"

[node name="CreateProjectFolderButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Создать папку"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
text = "Путь
"

[node name="ProjectDirLineEdit" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_bwaeq")

[node name="OpenProjectDirButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Открыть"

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 2
text = "Версия Godot
"

[node name="GodotVersionOptionButton" type="OptionButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 32
item_count = 1
selected = 0
popup/item_0/text = "Godot"
popup/item_0/icon = ExtResource("2_s5ld1")
popup/item_0/id = 0

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 2
text = "Метод рендера
"

[node name="RenderingMethodOptionButton" type="OptionButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 32
item_count = 1
selected = 0
popup/item_0/text = "Godot"
popup/item_0/icon = ExtResource("2_s5ld1")
popup/item_0/id = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 2
text = "Шаблон
"

[node name="TemplateOptionButton" type="OptionButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_constants/icon_max_width = 32
item_count = 1
selected = 0
popup/item_0/text = "Godot"
popup/item_0/icon = ExtResource("2_s5ld1")
popup/item_0/id = 0

[node name="OpenTemplateButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Открыть"

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/separation = 5

[node name="CreateCancelButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Отменить"

[node name="CreateOkButton" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Создать"

[node name="ProjectDirFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(456, 163)
ok_button_text = "Выбрать текущую папку"
cancel_button_text = "Отмена"
file_mode = 2
access = 2
use_native_dialog = true

[node name="TemplateDirFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a Directory"
size = Vector2i(456, 163)
ok_button_text = "Выбрать текущую папку"
cancel_button_text = "Отмена"
file_mode = 2
access = 2
use_native_dialog = true
